
Note:  Consider this addon to be experimental/beta/alpha/potentially-hazardous-to-your-health.
       Memory leaks and segfaults are to be expected until the code stabilizes, so beware of
       using it in production environments.   - Ethan



1.4b7 -??/??/2007
-----------------
- Makefile fixes for compilation flags
- Fix for bug where service check table always had same start/end time



1.4b6 - 09/27/2007
-----------------
NOTE: ** Requires Nagios 2.7 or higher, or Nagios 3.0b4
- Updated to support latest Nagios 3.x code (3.0b4)
- Added source OpenOffice docs in addition to PDFs
- Fix for segfault while processing host status/event information



1.4b5 - 08/29/2007
-----------------
NOTE: ** Requires Nagios 2.7 or higher, or Nagios 3.0b2
- Reintroduced contactgroup associations with host, service, and escalation definitions
- Adjustments for data structure changes made in Nagios 3.0b2
- Fix for missing math libraries during compilation (Dominic Settele)
- Changed MySQL db table types from MyISAM to InnoDB
- Updated to latest Nagios 3.x include files (3.0b2)



1.4b4 - 06/19/2007
-----------------
NOTE: ** Requires Nagios 2.7 or higher, or Nagios 3.0a5
- Added note about needing 'event_broker_options=-1' in Nagios config file
- Updated to latest Nagios 3.x include files (3.0a5)



1.4b3 - 04/10/2007
------------------
NOTE: ** Requires Nagios 2.7 or higher, or Nagios 3.0a3
- Added missing 'alias' field to hosts table
- Fixed problems with marking old, non-existant objects as inactive
- Fixed bug where host and service objects were not being marked active
- Fixed minor SQL errors
- Added DB upgrade and installation script (Ton Voon/Altinity)
- Updated to latest Nagios 3.x include files (3.0a3)



1.4b2 - 01/19/2007
------------------
- Makefile fixes for compiling ndomod event broker module
- Fixes for Nagios 2.7 and latest Nagios 3 alpha code for scheduled downtime changes
- Fixes for problems with DB indexes in 'host_contacts', 'service_contacts',