@@ -1,0 +1,36 @@
+#!/bin/sh
+# Startup script for NDO2DB
+# Activate with: insserv /etc/init.d/ndo2db
+# Use: /etc/init.d/ndo2db stop | start
+# Contributed by Bruno Quintais
+### BEGIN INIT INFO
+# Provides: ndo2db
+# Required-Start:
+# Required-Stop:
+# Default-Start: 3 5
+# Default-Stop: 0 1 2 6
+# Description: Automatic startup and shutdown of Nagios NDO2DB
+### END INIT INFO
+
+
+start() {
+su - nagios -c "/usr/local/nagios/bin/ndo2db -c /usr/local/nagios/etc/ndo2db.cfg"
+}
+stop() {
+su - nagios -c "killall -9 ndo2db"
+rm /usr/local/nagios/var/ndo.sock
+}
+
+case "$1" in
+start)
+start
+;;
+stop)
+stop
+;;
+*)
+exit 1
+esac
+exit 0
+
+
