@@ -1,0 +1,45 @@
+#!/usr/bin/perl -w
+
+my ${exec_prefix};
+my ${prefix};
+
+${prefix}="@prefix@";
+${exec_prefix}="@exec_prefix@";
+while ($f = shift @ARGV) {
+
+	if (-x "/bin/mktemp") { 
+		$TEMP = `/bin/mktemp $f.$$.XXXXXX`;
+		die 'Cannot make temporary file $TEMP' if($?);
+		chomp $TEMP;
+	} else {
+		$XXXXXX = rand;
+		$TEMP = "$f.$$.$XXXXXX";
+	}
+
+	open(IN,"<$f.in");
+	open(OUT,">$TEMP") || die 'Cannot make temporary file $TEMP';
+
+	while (<IN>) {
+		s|\@ndo2db_user\@|@ndo2db_user@|g;
+		s|\@ndo2db_group\@|@ndo2db_group@|g;
+		s|\@libexecdir\@|@libexecdir@|g; # put all --with-vars before directories
+		s|\@localstatedir\@|@localstatedir@|g;
+		s|\@sysconfdir\@|@sysconfdir@|g;
+		s|\@datadir\@|@datadir@|g;
+		s|\@sbindir\@|@sbindir@|g;
+		s|\@bindir\@|@bindir@|g;
+		s|\$\{exec_prefix\}|@exec_prefix@|g; # must be next to last
+		s|\$\{prefix\}|@prefix@|g; # must be last
+		print OUT $_;
+	}
+
+	close IN;
+	close OUT;
+
+	if ((! -e $f) || (`diff $f $TEMP`)) {
+		`mv $TEMP $f`;
+	} else {
+	         unlink $TEMP;
+	}
+
+}
